<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="show_instructions_at_start"
        android:title="@string/show_instructions"/>

    <SwitchPreferenceCompat
        android:id="@+id/scale_image_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:key="scale_image"
        android:title="@string/show_digital_scale"/>

    <ListPreference
        android:summary="%s"
        android:defaultValue="0"
        android:entries="@array/budget"
        android:entryValues="@array/budget_values"
        android:key="budget_selection"
        android:title="@string/budget"/>

</PreferenceScreen>